include/pinbridge/pinbridge.h

/* Borrowed instruction token. It is only valid in the Pin callback window. */
typedef struct PbInsHandle
{
    int32_t opaque;
} PbInsHandle;
/* Borrowed routine token returned by an INS inspection query. */
typedef struct PbRtnHandle
{
    int32_t opaque;
} PbRtnHandle;
typedef struct PbImgHandle
{
    int32_t opaque;
} PbImgHandle;
/* TRACE is a borrowed pointer in Pin 3.31, not an INDEX token. */
typedef struct PbTraceOpaque* PbTraceHandle;
/* Opaque callback registration or scoped-handler token. Zero is invalid. */
typedef struct PbCallbackHandle
{
    uint64_t opaque;
} PbCallbackHandle;
/* Borrowed CONTEXT pointer. Consumers must not dereference or retain it. */
typedef struct PbContextOpaque* PbContextHandle;
typedef const struct PbContextOpaque* PbConstContextHandle;
/* Borrowed physical register context. Consumers must not dereference or retain it. */
typedef struct PbPhysicalContextOpaque* PbPhysicalContextHandle;
/* Borrowed XED decode object. Valid only while PbXedDecodeCallback is running. */
typedef struct PbXedDecodedInstOpaque* PbXedDecodedInstHandle;
/* Borrowed, logically opaque Pin exception info. NULL means details are not requested. */
typedef struct PbExceptionInfoOpaque* PbExceptionInfoHandle;
/* Borrowed child-process handle. Valid only while PbFollowChildProcessCallback runs. */
typedef struct PbChildProcessOpaque* PbChildProcessHandle;
/* Numeric identities from the matched Pin 3.31 SDK build. */
typedef uint32_t PbRegId;
typedef uint32_t PbIargType;
typedef uint32_t PbPinErrorType;
typedef uint32_t PbThreadId;
typedef uint32_t PbContextChangeReason;
typedef uint32_t PbExceptHandlingResult;
typedef uint32_t PbBufferId;
typedef uint32_t PbSyscallStandard;
typedef uint32_t PbProtoArgKind;
typedef uint32_t PbDebuggingEvent;
typedef uint32_t PbDebugConnectionType;
typedef uint32_t PbDebugModeOption;
typedef struct PbDebuggerRegDescription
{
    PbRegId pin_reg;
    uint32_t tool_reg_id;
    uint32_t width_in_bits;
    const char* name;
    int32_t gcc_id;
} PbDebuggerRegDescription;
typedef struct PbDebugConnectionInfo
{
    PbDebugConnectionType type;
    uint8_t stop_at_entry;
    uint8_t reserved[3];
    int32_t tcp_port;
} PbDebugConnectionInfo;
typedef struct PbDebugMode
{
    PbDebugConnectionType type;
    PbDebugModeOption options;
    const char* tcp_client_ip;
    int32_t tcp_port;
    uint32_t reserved;
} PbDebugMode;
typedef uint8_t (PB_CALL *PbDebugBreakpointCallback)(
    uint64_t address, uint32_t size, uint8_t insert, void* user_data);
typedef uint8_t (PB_CALL *PbDebugInterpreterCallback)(
    PbThreadId thread_id, PbContextHandle context, const char* command,
    const char** reply_utf8, void* user_data);
typedef void (PB_CALL *PbGetEmulatedRegisterCallback)(
    uint32_t tool_reg_id, PbThreadId thread_id, PbContextHandle context,
    void* data, void* user_data);
typedef uint64_t (PB_CALL *PbGetTargetDescriptionCallback)(
    const char* name, uint64_t size, void* buffer, void* user_data);
typedef uint8_t (PB_CALL *PbInterceptDebuggingEventCallback)(
    PbThreadId thread_id, PbDebuggingEvent event_type,
    PbContextHandle context, void* user_data);
typedef void (PB_CALL *PbSetEmulatedRegisterCallback)(
    uint32_t tool_reg_id, PbThreadId thread_id, PbContextHandle context,
    const void* data, void* user_data);
typedef uint8_t (PB_CALL *PbMessageCallback)(
    const char* message, PbPinErrorType type, int32_t user_type,
    int32_t severity, const uint64_t* arguments, uint32_t argument_count,
    void* user_data);
typedef void (PB_CALL *PbTlsDestructor)(void* data);
typedef void (PB_CALL *PbThreadRootCallback)(void* argument);
typedef struct PbIargDescriptor
{
    PbIargType type;
    uint32_t reserved;
    uint64_t value;
    uint64_t value2;
} PbIargDescriptor;
typedef struct PbProtoArg
{
    PbProtoArgKind kind;
    uint32_t reserved;
    uint64_t size;
} PbProtoArg;
typedef struct PbRegSet
{
    uint64_t words[PB_REGSET_WORD_COUNT];
} PbRegSet;
typedef struct PbFxSave
{
    uint8_t bytes[PB_FXSAVE_SIZE];
} PbFxSave;
/* ABI-owned snapshot passed by const pointer during memory translation callbacks. */
typedef struct PbMemoryTransInfo
{
    uint64_t address;
    uint64_t size;
    uint64_t instruction_pointer;
    PbThreadId thread_id;
    uint32_t memory_operation;
    uint8_t is_atomic;
    uint8_t is_rmw;
    uint8_t is_prefetch;
    uint8_t is_from_pin;
    uint32_t reserved;
} PbMemoryTransInfo;
/* ABI-owned value snapshot of a half-open memory range [base, base + size). */
typedef struct PbMemRange
{
    uint64_t base;
    uint64_t size;
} PbMemRange;
/* ABI-owned value snapshot of the public EXCEPTION_INFO query surface. */
typedef struct PbExceptionInfoSnapshot
{
    uint32_t exception_code;
    uint32_t exception_class;
    uint64_t exception_address;
    uint32_t flags;
    uint32_t faulty_access_type;
    uint64_t faulty_access_address;
    uint32_t fp_errors;
    uint32_t windows_exception_code;
    uint32_t windows_argument_count;
    uint32_t reserved;
    uint64_t windows_arguments[5];
} PbExceptionInfoSnapshot;
typedef void(PB_CALL* PbInsInstrumentCallback)(PbInsHandle ins, void* user_data);
typedef void(PB_CALL* PbInsAnalysisCallback)(void* user_data);
/* Analysis callback that also receives the thread context (IARG_CONTEXT).
   Legal uses include reading registers and redirecting execution via
   pb_pin_set_context_reg + pb_pin_execute_at (ABI v1.3). */
typedef void(PB_CALL* PbInsContextAnalysisCallback)(
    PbContextHandle context, void* user_data);
typedef uint64_t(PB_CALL* PbInsPredicateCallback)(void* user_data);
typedef void(PB_CALL* PbTraceInstrumentCallback)(PbTraceHandle trace, void* user_data);
typedef void(PB_CALL* PbRtnInstrumentCallback)(PbRtnHandle rtn, void* user_data);
typedef void(PB_CALL* PbImgInstrumentCallback)(PbImgHandle img, void* user_data);
typedef void(PB_CALL* PbApplicationStartCallback)(void* user_data);
typedef void(PB_CALL* PbPrepareForFiniCallback)(void* user_data);
typedef void(PB_CALL* PbFiniCallback)(int32_t code, void* user_data);
typedef void(PB_CALL* PbDetachCallback)(void* user_data);
typedef void(PB_CALL* PbDetachProbedCallback)(void* user_data);
typedef void(PB_CALL* PbAttachProbedCallback)(void* user_data);
typedef void(PB_CALL* PbOutOfMemoryCallback)(
    uint64_t requested_size, void* user_data);
typedef void(PB_CALL* PbThreadStartCallback)(
    PbThreadId thread_id, PbContextHandle context, int32_t flags, void* user_data);
typedef void(PB_CALL* PbThreadFiniCallback)(
    PbThreadId thread_id, PbConstContextHandle context, int32_t code, void* user_data);
/* from/to are borrowed for the callback duration; either may be NULL per Pin's reason rules. */
typedef void(PB_CALL* PbContextChangeCallback)(
    PbThreadId thread_id, PbContextChangeReason reason,
    PbConstContextHandle from, PbContextHandle to, int32_t info, void* user_data);
typedef void(PB_CALL* PbXedDecodeCallback)(
    PbXedDecodedInstHandle decoded_instruction, void* user_data);
typedef uint64_t(PB_CALL* PbFetchCallback)(
    void* buffer, uint64_t address, uint64_t size,
    PbExceptionInfoHandle exception_info, void* user_data);
typedef PbExceptHandlingResult(PB_CALL* PbInternalExceptionCallback)(
    PbThreadId thread_id, PbExceptionInfoHandle exception_info,
    PbPhysicalContextHandle physical_context, void* user_data);
typedef uint64_t(PB_CALL* PbMemoryAddressTransCallback)(
    const PbMemoryTransInfo* info, void* user_data);
/* Return zero to leave the child uninstrumented, nonzero to follow it. */
typedef uint8_t(PB_CALL* PbFollowChildProcessCallback)(
    PbChildProcessHandle child, void* user_data);
typedef void(PB_CALL* PbProbedCallCallback)(void* user_data);
typedef void(PB_CALL* PbBblAnalysisCallback)(void* user_data);
typedef uint64_t(PB_CALL* PbBblPredicateCallback)(void* user_data);
typedef void(PB_CALL* PbTraceAnalysisCallback)(void* user_data);
typedef uint64_t(PB_CALL* PbTracePredicateCallback)(void* user_data);
typedef void(PB_CALL* PbTraceSmcCallback)(
    uint64_t trace_start, uint64_t trace_end, void* user_data);
typedef void*(PB_CALL* PbTraceBufferCallback)(
    PbBufferId id, PbThreadId thread_id, PbConstContextHandle context,
    void* buffer, uint64_t num_elements, void* user_data);
typedef void(PB_CALL* PbSyscallEntryCallback)(
    PbThreadId thread_id, PbContextHandle context,
    PbSyscallStandard standard, void* user_data);
typedef void(PB_CALL* PbSyscallExitCallback)(
    PbThreadId thread_id, PbContextHandle context,
    PbSyscallStandard standard, void* user_data);
/* JIT-only fixed capture instrumentation (ABI v1.1). These entries let C ABI
   consumers (Rust, ...) build event engines without variadic INS_InsertCall.
   Each expands to IPOINT_BEFORE with a fixed IARG capture list:
   - pb_ins_insert_capture_regs: IARG_INST_PTR, IARG_THREAD_ID and four
     architecture-specific general-purpose register slots (RCX/RDX/R8/R9
     on Win64; ECX/EDX/EAX/EBX on ia32).
   - pb_ins_insert_memory_operands: one predicated call per memory operand
     carrying IARG_MEMORYOP_EA/SIZE and a PB_MEMORY_TYPE_* access tag.
   - pb_ins_insert_exec: IARG_INST_PTR, IARG_THREAD_ID and the static
     instruction size.
   - pb_ins_insert_branch_edge: IARG_INST_PTR, IARG_THREAD_ID,
     IARG_BRANCH_TARGET_ADDR and IARG_BRANCH_TAKEN. */
typedef void (PB_CALL* PbInsCaptureRegsCallback)(
    uint64_t address, uint32_t thread_id,
    uint64_t rcx, uint64_t rdx, uint64_t r8, uint64_t r9, void* user_data);
/* Context-bearing variant for synchronous Hook actions. The register values
   are captured without querying Pin from the application thread; the borrowed
   context may be changed with pb_pin_set_context_reg or the ABI-aware stack
   argument helpers and committed with pb_pin_execute_at. */
typedef void (PB_CALL* PbInsContextCaptureRegsCallback)(
    uint64_t address, uint32_t thread_id, PbContextHandle context,
    uint64_t rcx, uint64_t rdx, uint64_t r8, uint64_t r9, void* user_data);
typedef void (PB_CALL* PbInsMemoryOperandCallback)(
    uint64_t instruction_address, uint32_t thread_id,
    uint64_t memory_address, uint32_t size, uint32_t access, void* user_data);
typedef uint64_t (PB_CALL* PbInsMemoryTranslateCallback)(
    uint64_t instruction_address, uint32_t thread_id,
    uint64_t memory_address, uint32_t size, uint32_t memory_operation,
    void* user_data);
typedef void (PB_CALL* PbInsExecCallback)(
    uint64_t address, uint32_t thread_id, uint32_t size, void* user_data);
typedef void (PB_CALL* PbInsBranchEdgeCallback)(
    uint64_t address, uint32_t thread_id,
    uint64_t target_address, uint64_t taken, void* user_data);
/* Value-capturing extensions of the fixed capture family (ABI v1.5), built
   for the trace recording channel. Same IPOINT_BEFORE predicated-call
   expansion and (address, thread_id, ...) argument order as the v1.1
   entries; the callback never fails -- a short PIN_SafeCopy passes what it
   got, zero-padded.
   - pb_ins_insert_capture_exec_bytes: IARG_INST_PTR, IARG_THREAD_ID, the
     static instruction size, and up to 15 instruction bytes safe-copied at
     analysis time (bytes_lo = bytes[0..8), bytes_hi = bytes[8..15) in the
     low bytes, zero-padded). On copy failure the size goes through with
     zeroed bytes.
   - pb_ins_insert_memory_operands_values: one predicated call per memory
     operand like pb_ins_insert_memory_operands, extended with value = up to
     8 bytes safe-copied from the effective address (zero-padded). Read
     operands report the value about to be read at IPOINT_BEFORE. Write
     operands report the value just written from IPOINT_AFTER when
     INS_IsValidForIpointAfter holds (the pre-write EA is carried over
     thread-locally; IARG_MEMORYOP_EA itself is IPOINT_BEFORE-only); when it
     does not hold (no fall-through, e.g. call) the call stays at
     IPOINT_BEFORE and value is the pre-write content. */
typedef void (PB_CALL* PbInsExecBytesCallback)(
    uint64_t address, uint32_t thread_id, uint32_t size,
    uint64_t bytes_lo, uint64_t bytes_hi, void* user_data);
typedef void (PB_CALL* PbInsMemoryOperandValueCallback)(
    uint64_t instruction_address, uint32_t thread_id,
    uint64_t memory_address, uint32_t size, uint32_t access,
    uint64_t value, void* user_data);
/* Runtime disassembly (ABI v1.2): decodes a caller-provided byte image with
   XED. Does not read target memory itself -- the caller supplies the bytes.
   text is the Intel-syntax instruction, NUL-terminated and truncated. */
typedef struct PbDisasmInsn
{
    uint64_t address;
    uint32_t size;
    uint32_t kind; /* 0 linear, 1 branch, 2 call, 3 return */
    char text[64];
} PbDisasmInsn;
/* Control-flow classification of one instruction (ABI v1.4), for exact
   single-stepping: enumerates every possible successor, either directly
   (target) or through a register/memory expression the caller evaluates
   against a live stopped context. */
typedef struct PbFlowInsn
{
    uint64_t address;
    uint32_t size;
    uint32_t kind;       /* 0 linear, 1 branch, 2 call, 3 return */
    uint8_t conditional; /* address+size is also a possible successor */
    uint8_t has_target;  /* target holds a direct successor address */
    uint8_t ind_reg;     /* a successor is the value of base_reg */
    uint8_t ind_mem;     /* a successor is *(base + index*scale + disp) */
    int32_t base_reg;    /* PbRegId or -1; PB_REG_RIP means base = address+size */
    int32_t index_reg;   /* PbRegId or -1 */
    uint64_t scale;
    int64_t disp;
    uint64_t target;     /* direct successor when has_target != 0 */
} PbFlowInsn;