bindings/rust/pinbridge-sys/src/bindings.rs


#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbCallbackHandle {
    pub opaque: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbDebuggerRegDescription {
    pub pin_reg: PbRegId,
    pub tool_reg_id: u32,
    pub width_in_bits: u32,
    pub name: *const c_char,
    pub gcc_id: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbDebugConnectionInfo {
    pub r#type: PbDebugConnectionType,
    pub stop_at_entry: u8,
    pub reserved: [u8; 3],
    pub tcp_port: i32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbDebugMode {
    pub r#type: PbDebugConnectionType,
    pub options: PbDebugModeOption,
    pub tcp_client_ip: *const c_char,
    pub tcp_port: i32,
    pub reserved: u32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbIargDescriptor {
    pub r#type: PbIargType,
    pub reserved: u32,
    pub value: u64,
    pub value2: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbProtoArg {
    pub kind: PbProtoArgKind,
    pub reserved: u32,
    pub size: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbRegSet {
    pub words: [u64; 16],
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbFxSave {
    pub bytes: [u8; 512],
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbMemoryTransInfo {
    pub address: u64,
    pub size: u64,
    pub instruction_pointer: u64,
    pub thread_id: PbThreadId,
    pub memory_operation: u32,
    pub is_atomic: u8,
    pub is_rmw: u8,
    pub is_prefetch: u8,
    pub is_from_pin: u8,
    pub reserved: u32,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbMemRange {
    pub base: u64,
    pub size: u64,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbExceptionInfoSnapshot {
    pub exception_code: u32,
    pub exception_class: u32,
    pub exception_address: u64,
    pub flags: u32,
    pub faulty_access_type: u32,
    pub faulty_access_address: u64,
    pub fp_errors: u32,
    pub windows_exception_code: u32,
    pub windows_argument_count: u32,
    pub reserved: u32,
    pub windows_arguments: [u64; 5],
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbDisasmInsn {
    pub address: u64,
    pub size: u32,
    pub kind: u32,
    pub text: [c_char; 64],
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct PbFlowInsn {
    pub address: u64,
    pub size: u32,
    pub kind: u32,
    pub conditional: u8,
    pub has_target: u8,
    pub ind_reg: u8,
    pub ind_mem: u8,
    pub base_reg: i32,
    pub index_reg: i32,
    pub scale: u64,
    pub disp: i64,
    pub target: u64,
}

pub type PbDebugBreakpointCallback = Option<unsafe extern "C" fn(address: u64, size: u32, insert: u8, user_data: *mut c_void) -> u8>;
pub type PbDebugInterpreterCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, context: PbContextHandle, command: *const c_char, reply_utf8: *mut *const c_char, user_data: *mut c_void) -> u8>;
pub type PbGetEmulatedRegisterCallback = Option<unsafe extern "C" fn(tool_reg_id: u32, thread_id: PbThreadId, context: PbContextHandle, data: *mut c_void, user_data: *mut c_void)>;
pub type PbGetTargetDescriptionCallback = Option<unsafe extern "C" fn(name: *const c_char, size: u64, buffer: *mut c_void, user_data: *mut c_void) -> u64>;
pub type PbInterceptDebuggingEventCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, event_type: PbDebuggingEvent, context: PbContextHandle, user_data: *mut c_void) -> u8>;
pub type PbSetEmulatedRegisterCallback = Option<unsafe extern "C" fn(tool_reg_id: u32, thread_id: PbThreadId, context: PbContextHandle, data: *const c_void, user_data: *mut c_void)>;
pub type PbMessageCallback = Option<unsafe extern "C" fn(message: *const c_char, r#type: PbPinErrorType, user_type: i32, severity: i32, arguments: *const u64, argument_count: u32, user_data: *mut c_void) -> u8>;
pub type PbTlsDestructor = Option<unsafe extern "C" fn(data: *mut c_void)>;
pub type PbThreadRootCallback = Option<unsafe extern "C" fn(argument: *mut c_void)>;
pub type PbInsInstrumentCallback = Option<unsafe extern "C" fn(ins: PbInsHandle, user_data: *mut c_void)>;
pub type PbInsAnalysisCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbInsContextAnalysisCallback = Option<unsafe extern "C" fn(context: PbContextHandle, user_data: *mut c_void)>;
pub type PbInsPredicateCallback = Option<unsafe extern "C" fn(user_data: *mut c_void) -> u64>;
pub type PbTraceInstrumentCallback = Option<unsafe extern "C" fn(trace: PbTraceHandle, user_data: *mut c_void)>;
pub type PbRtnInstrumentCallback = Option<unsafe extern "C" fn(rtn: PbRtnHandle, user_data: *mut c_void)>;
pub type PbImgInstrumentCallback = Option<unsafe extern "C" fn(img: PbImgHandle, user_data: *mut c_void)>;
pub type PbApplicationStartCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbPrepareForFiniCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbFiniCallback = Option<unsafe extern "C" fn(code: i32, user_data: *mut c_void)>;
pub type PbDetachCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbDetachProbedCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbAttachProbedCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbOutOfMemoryCallback = Option<unsafe extern "C" fn(requested_size: u64, user_data: *mut c_void)>;
pub type PbThreadStartCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, context: PbContextHandle, flags: i32, user_data: *mut c_void)>;
pub type PbThreadFiniCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, context: PbConstContextHandle, code: i32, user_data: *mut c_void)>;
pub type PbContextChangeCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, reason: PbContextChangeReason, from: PbConstContextHandle, to: PbContextHandle, info: i32, user_data: *mut c_void)>;
pub type PbXedDecodeCallback = Option<unsafe extern "C" fn(decoded_instruction: PbXedDecodedInstHandle, user_data: *mut c_void)>;
pub type PbFetchCallback = Option<unsafe extern "C" fn(buffer: *mut c_void, address: u64, size: u64, exception_info: PbExceptionInfoHandle, user_data: *mut c_void) -> u64>;
pub type PbInternalExceptionCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, exception_info: PbExceptionInfoHandle, physical_context: PbPhysicalContextHandle, user_data: *mut c_void) -> PbExceptHandlingResult>;
pub type PbMemoryAddressTransCallback = Option<unsafe extern "C" fn(info: *const PbMemoryTransInfo, user_data: *mut c_void) -> u64>;
pub type PbFollowChildProcessCallback = Option<unsafe extern "C" fn(child: PbChildProcessHandle, user_data: *mut c_void) -> u8>;
pub type PbProbedCallCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbBblAnalysisCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbBblPredicateCallback = Option<unsafe extern "C" fn(user_data: *mut c_void) -> u64>;
pub type PbTraceAnalysisCallback = Option<unsafe extern "C" fn(user_data: *mut c_void)>;
pub type PbTracePredicateCallback = Option<unsafe extern "C" fn(user_data: *mut c_void) -> u64>;
pub type PbTraceSmcCallback = Option<unsafe extern "C" fn(trace_start: u64, trace_end: u64, user_data: *mut c_void)>;
pub type PbTraceBufferCallback = Option<unsafe extern "C" fn(id: PbBufferId, thread_id: PbThreadId, context: PbConstContextHandle, buffer: *mut c_void, num_elements: u64, user_data: *mut c_void) -> *mut c_void>;
pub type PbSyscallEntryCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, context: PbContextHandle, standard: PbSyscallStandard, user_data: *mut c_void)>;
pub type PbSyscallExitCallback = Option<unsafe extern "C" fn(thread_id: PbThreadId, context: PbContextHandle, standard: PbSyscallStandard, user_data: *mut c_void)>;
pub type PbInsCaptureRegsCallback = Option<unsafe extern "C" fn(address: u64, thread_id: u32, rcx: u64, rdx: u64, r8: u64, r9: u64, user_data: *mut c_void)>;
pub type PbInsContextCaptureRegsCallback = Option<unsafe extern "C" fn(address: u64, thread_id: u32, context: PbContextHandle, rcx: u64, rdx: u64, r8: u64, r9: u64, user_data: *mut c_void)>;
pub type PbInsMemoryOperandCallback = Option<unsafe extern "C" fn(instruction_address: u64, thread_id: u32, memory_address: u64, size: u32, access: u32, user_data: *mut c_void)>;
pub type PbInsMemoryTranslateCallback = Option<unsafe extern "C" fn(instruction_address: u64, thread_id: u32, memory_address: u64, size: u32, memory_operation: u32, user_data: *mut c_void) -> u64>;
pub type PbInsExecCallback = Option<unsafe extern "C" fn(address: u64, thread_id: u32, size: u32, user_data: *mut c_void)>;
pub type PbInsBranchEdgeCallback = Option<unsafe extern "C" fn(address: u64, thread_id: u32, target_address: u64, taken: u64, user_data: *mut c_void)>;
pub type PbInsExecBytesCallback = Option<unsafe extern "C" fn(address: u64, thread_id: u32, size: u32, bytes_lo: u64, bytes_hi: u64, user_data: *mut c_void)>;
pub type PbInsMemoryOperandValueCallback = Option<unsafe extern "C" fn(instruction_address: u64, thread_id: u32, memory_address: u64, size: u32, access: u32, value: u64, user_data: *mut c_void)>;
